--- a/abstract.tex
+++ b/abstract.tex
@@ -3,7 +3,7 @@
 Confronted with challenges concerning product data quality, Alkemics decided to explore new ways to provide value proposition to its clients.
 
 This paper aims at explaining how we tackled data-quality challenges at Alkemics, with the use of some machine learning algorithms.
-But rather than solely describing models and algorithms, a focus is put on implementation and business added value. 
+But rather than solely describing models and algorithms, a focus is put on implementation and business added value as well. 
 
 
 \end{abstract}
