--- a/p_intro.tex
+++ b/p_intro.tex
@@ -6,6 +6,11 @@ Before diving in the machine-learning related challenges, this chapter will pres
 
 \section{Alkemics}
 
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{./images/introduction/alkemics_website_global.png}
+\caption{Alkemics plateform}
+\end{figure}
 
 Alkemics connects brands and retailers to help them market \& sell their products everywhere, driving business growth, by allowing them to collect, enrich, and share product data across the retail ecosystem.
 
@@ -21,6 +26,14 @@ Because of increasing regulations, new customer demands, omni-channel communicat
 Yet the difficulties to gather this data keep growing: the number of products is growing exponentially, some products identification numbers change more than 10 times per year (promotion, seasonality, new recipes, new packagings...), and overall, 40\% of products identification numbers are renewed every year.
 
 This cascades in a series of problems that handicap manufacturers, retailers and consumers: logistics struggle to maintain stock, accounting systems fail to track how different products are actually the same consumption unit, pricing teams struggle to maintain price coherency in this dynamic environment, marketing teams are inefficient to share richer and richer content about the product, BI teams feel that the consumption of the consumer are changing while they actually don't. 
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{./images/introduction/without_alk.png}
+%\caption{}
+\end{figure}
+
 
 Alkemics solution to these challenges is a plateform that enables:
 \\
@@ -42,8 +55,8 @@ Alkemics solution to these challenges is a plateform that enables:
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.35]{./images/alkemics_website_global.png}
-\caption{Alkemics plateform}
+\includegraphics[scale=0.35]{./images/introduction/with_alk.png}
+%\caption{Alkemics plateform}
 \end{figure}
 
 
