--- a/biblio.bib
+++ b/biblio.bib
@@ -74,3 +74,10 @@
     howpublished = {http://ufldl.stanford.edu/tutorial/supervised/SoftmaxRegression/},
     note = {accessed: 2017-12}
 }
+
+@article{wu2017starspace,
+  title={StarSpace: Embed All The Things!},
+  author = {{Wu}, L. and {Fisch}, A. and {Chopra}, S. and {Adams}, K. and {Bordes}, A. and {Weston}, J.},
+  journal={arXiv preprint arXiv:{1709.03856}},
+  year={2017}
+}
