--- a/concl.tex
+++ b/concl.tex
@@ -7,7 +7,7 @@ During this project, we tackled a business issue concerning data-quality that st
 
 Our solution to this challenge has been to build a dedicated workflow where we would detect data-inconsistencies through: attribute classification with machine learning techniques, product-data scrapping on the web, manual rules.
 
-A majority of our suggestion stem from machine learning, to achieve this result we've had to overcome some specific challenges relative to natural language processing, and multilabel classification. To release and provide 99\% accurate suggestions to our users, we decided for now to validate manually all suggestions that did not stem from at least two different sources.
+A majority of our suggestion stem from machine learning, to achieve this result we've had to overcome some specific challenges relative to natural language processing, and multilabel classification. To release and provide the best suggestions accuracy to our users, we decided for now to validate manually all suggestions that did not stem from at least two different sources, and expect in the future to automate the validation of suggestions with maximum scores.
 
 Machine learning hype drives attention mostly to models and algorithms.  Yet, this project convinced me that 80\% of a project success depends on pragmatism and implementation. The algorithms were a part of the equation, feasibility, implementation and business value were the others.
 
