--- a/rapport.tex
+++ b/rapport.tex
@@ -14,8 +14,6 @@
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-%\usepackage{graphicx}
-%\usepackage[pdftex]{graphicx}
 \usepackage{setspace}
 \usepackage[pdftex]{hyperref}
 \usepackage{amsmath,amsthm,amsfonts,amssymb}
@@ -29,7 +27,6 @@
 \usepackage{fancyhdr}
 \usepackage{lmodern}
 \usepackage{sistyle}
-% \usepackage{color}
 \usepackage{xcolor}
 \usepackage{float}
 \usepackage{wrapfig}
@@ -37,30 +34,25 @@
 \usepackage{verbdef}
 \usepackage{dsfont}
 \usepackage[normalem]{ulem}
-\usepackage{amssymb} % for mathbb
-\usepackage{outlines}
-% for quotes
+
+% for mathbb
+\usepackage{amssymb}
+\usepackage{outlines} 
+
+% for quotes 
 \usepackage{dirtytalk}
+
 % for size of enumerate/itemize
 \usepackage{enumitem}
 \setlist{noitemsep}
-
-% for diagrams
-\usepackage{tikz}
+\usepackage{tikz} % for diagrams
 \usetikzlibrary{shapes,arrows, positioning}
-
-% force footnotes to be on the bottom
-\usepackage[bottom]{footmisc}
+\usepackage[bottom]{footmisc} % force footnotes to be on the bottom
 
 % for tables
 \usepackage{booktabs}
 \usepackage{tabularx,ragged2e}
 \newcolumntype{L}{>{\arraybackslash}X}
-
-% for pseudocode
-\usepackage{algorithm}
-\usepackage{algorithmic}
-% \usepackage[noend]{algpseudocode}
 
 % bigger operators
 \usepackage{relsize}
