--- a/p_data_quality.tex
+++ b/p_data_quality.tex
@@ -405,6 +405,6 @@ For instance, some new ingredients might appear, and at the beginning their low 
 \caption{Selection of classes with lowest scores. Tuna fish performs badly, because of the low train support.}
 \end{figure}
 
-In that case we will use our validation dashboard. We would make a textual search to validate some related suggestions, or even create manually some suggestions. Sometimes, even some dozens of occurences will bootstrap a new class and launch a virtuous circle for the model.
+In that case we will use our validation dashboard. We would make a textual search to validate some related suggestions, or even create manually some suggestions. Sometimes, even some dozens of occurences are enough to bootstrap a new class and launch a virtuous circle for the model.
 
 
